# libskylark

./: .gitignore  .gitlab-ci.yml  .travis.yml  CLA.txt  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  INSTALL  LICENSE  Makefile  README  README.md  config.h.in  index.html  params.json  skylark.hpp
CMake/: SKYLARKConfig.cmake.in  cmake_boost.cmake  cmake_build_capi.cmake  cmake_build_examples.cmake  cmake_build_ml.cmake  cmake_build_nla.cmake  cmake_build_python_interface.cmake  cmake_combblas_option.cmake  cmake_compiler_flags.cmake  cmake_date.cmake  (+15 more)
capi/: CMakeLists.txt  basec.hpp  capi.cpp  cbase.cpp  cio.cpp  ckernel.cpp  ckrr.cpp  cml.cpp  cnla.cpp  crlsc.cpp  csketch.cpp  ioc.hpp  kernelc.hpp  krrc.hpp  matrix_types.cpp  matrix_types.hpp  mlc.hpp  nlac.hpp  rlscc.hpp  sketchc.hpp  sparse_matrix.cpp  sparse_matrix.hpp
examples/: CMakeLists.txt  Makefile  asynch.cpp  community.cpp  condest.cpp  elemental.cpp  hp_dense.cpp  kernel_regression.cpp  kmeans.cpp  least_squares.cpp  libskylark_softlayer.html  low_rank.cpp  lsqr.cpp  parser.hpp  rand_svd.cpp  rand_svd1.cpp  random_features.cpp  randsvd_embeddings.html  regression.cpp  sbm.cpp  svd.cpp  utilities.hpp
examples/python/: script.py  setup.py
ml/: BlockADMM.cpp  BlockADMM.hpp  CMakeLists.txt  FeatureTransform.cpp  FeatureTransform.hpp  FunctionProx.cpp  FunctionProx.hpp  Makefile  coding.hpp  convert2hdf5.cpp  feature_transform_tags.hpp  hilbert.hpp  io.hpp  kernels.hpp  kmeans.hpp  krr.hpp  log  low_rank.hpp  matrixutils.hpp  ml.hpp  model.hpp  options.hpp  predict.cpp  profiler.hpp  rlsc.hpp  run.hpp  sbm.hpp  skylark_community.cpp  skylark_convert2hdf5.cpp  skylark_graph_se.cpp  skylark_krr.cpp  skylark_ml.cpp  train  train.cpp  utils.hpp
ml/graph/: graph.hpp  local_computations.hpp  spectral_embedding.hpp
ml/kernels/: BaseKernel.hpp  ExpsemigroupKernel.hpp  GaussianKernel.hpp  KernelContainer.hpp  LaplacianKernel.hpp  LinearKernel.hpp  MaternKernel.hpp  PolynomialKernel.hpp  gram.hpp  kernels.hpp
ml/krr/: FeaturedMapPrecond.hpp  KrrParams.hpp  approximateKernelRidge.hpp  fasterKernelRidge.hpp  kernelRidge.hpp  krr.hpp  largeScaleKernelRidge.hpp  sketchedApproximateKernelRidge.hpp
ml/rlsc/: RLSCParams.hpp  approximateKernelRLSC.hpp  fasterKernelRLSC.hpp  kernelRLSC.hpp  largeScaleKernelRLSC.hpp  rlsc.hpp  sketchedApproximateKernelRLSC.hpp
nla/: CMakeLists.txt  Chebyshev.hpp  CondEst.hpp  LSQR.hpp  RandSVD.hpp  SVD_Elemental.hpp  iter_params.hpp  iter_solver_op.hpp  iter_solver_op_CombBLAS.hpp  iter_solver_op_Elemental.hpp  least_squares.hpp  lsqr.hpp  massive_skylark_least_squares.cpp  massive_skylark_svd.cpp  massive_svd.hpp  nla.hpp  precond.hpp  sketched_svd.hpp  sketched_svd_Elemental.hpp  skylark_linear.cpp  skylark_svd.cpp  spectral.hpp  svd.hpp
python-skylark/: CMakeLists.txt  clean.sh  setup.py  setup.py.in
python-skylark/datasets/: usps.hdf5
python-skylark/doc/: Makefile  make.bat
python-skylark/doc/source/: base.rst  capi.rst  conf.py  contributing.rst  index.rst  installation.rst  introduction.rst  io.rst  meetings.rst  ml.rst  nla.rst  quick_start.rst  sketching.rst  tasks.rst
python-skylark/skylark/: __init__.py  base.py  cskylark.py  elemhelper.py  errors.py  io.py  lib.py  metrics.py  sketch.py  sparse_matrix.py  sprand.py  streaming.py  utilities.py  utils.py
python-skylark/skylark/examples/: classification_example.py  exampleIO.py  example_IO.py  example_IO_combBLAS.py  example_cskylark.py  example_krr.py  example_krr_polynomial.py  example_sketch.py  example_sparse_sketch.py  example_streaming.py  sketch_solve.py  svd.py
python-skylark/skylark/ml/: __init__.py  classifier.py  distances.py  kernels.py  kernels.py.old  krr.py  modeling.py  nonlinear.py  rlsc.py  utils.py
python-skylark/skylark/ml/.svn/: all-wcprops  entries
python-skylark/skylark/ml/.svn/text-base/: kernels.py.svn-base  nonlinear.py.svn-base
python-skylark/skylark/ml/admm/: KernelMachine.py  predict.py  proxlibrary.py  train.py
python-skylark/skylark/ml/admm/cproxoperators/: Makefile  libproxoperators.c  libproxoperators.h
python-skylark/skylark/model/: model.py
python-skylark/skylark/nla/: __init__.py  krank.py  lowrank.py  lsqr.py  nla.py  nnz_svd.py  randlobpcg.py  svd.py
python-skylark/skylark/notebooks/: CombBLAS Sketch (example).ipynb  Elemental Sketch (example).ipynb  Faster Least Squares.ipynb  Sketch and Solve.ipynb  SparseSVD.ipynb
python-skylark/skylark/tests/: test_nla.py  utils.py
python-skylark/skylark/tests/base/: test_lib.py
python-skylark/skylark/tests/ml/: test_distances.py  test_kernels.py
python-skylark/skylark/tests/nla/: test_nla.py
sketch/boost_python/: CMakeLists.txt  JLT.cpp  context.cpp  documentation.cpp  module.cpp  transforms.cpp
sketch/boost_python/resources/: __init__.py
sketch/capi/: CMakeLists.txt  capi.cpp  sketchc.hpp
tests/: CMakeLists.txt
tests/functionality/: CT_test.py  CWT_test.py  FJLT_test.py  JLT_new_test.py  JLT_test.py  MMT_test.py  WZT_test.py
tests/functionality/helper/: elemental_matrix.py
tests/internal/: CMakeLists.txt  SparsityTransformTest.cpp
tests/performance/: CMakeLists.txt  CWT_perf_test.py  CWT_performance.py  FJLT_perf_test.py  FJLT_performance.py  JLT_perf_test.py  JLT_performance.py  perftest.py  remotes.json.example  sketch.py
tests/performance/helper/: generate_plot.py  master.py  perftest.py
tests/regression/: CMakeLists.txt  CT_test.py  JLT_test.py  svd_test.py  test_nnz_svd.py
tests/regression/helper/: test.py
tests/unit/: CMakeLists.txt  DenseSketchApplyElementalTest.cpp  DistSparseTest.cpp  InternalSparseSketchApplyTest.cpp  LocalSparseSketchApply.cpp  MixedGemmTest.cpp  ReadArcList.cpp  SVDElementalTest.cpp  SerializationTest.cpp  SimpleJSONParserTest.cpp  SparseSketchApplyCombBLASTest.cpp  SparseSketchApplyElementalTest.cpp  SparseSketchApplyMixedTest.cpp  get_elbows_test.cpp  io.py  io_test.py  test_utils.hpp
utility/python/: CMakeLists.txt  dense_1D.cpp  documentation.cpp  mapper.cpp  matrix.cpp  module.cpp  partitioner.cpp  py_iterator.cpp
utility/python/resources/: __init__.py  test_out.py
(+2322 files in other folders)
